--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,12 @@
-.h1{
-  text-align:center;
-  color:yellow;
+.bn62 {
+  color: #1cc49d;
+  background-color: #1b2f31;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3em;
+  width: 8em;
+  font-size: large;
+  font-weight: 600;
 }
