--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 3em;
-  width: 8em;
+  width: 50px;
   font-size: large;
   font-weight: 600;
 }
