--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
+.titlebox{
+  background-color: #F0D1CD;
+  border-radius:20px;
+}
+
+
 .passbox{
   background-color:#FFE8FF;
   border-radius:50px;
