--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 .titlebox{
   margin:50px;
-  background-color: #F0D1CD;
+  background-color: #ffff;
   border-radius:20px;
 }
 
@@ -23,7 +23,7 @@
 
 body {
   margin: 0;
-  background-color: #ffff;
+  background-color: #F8F8F8;
 }
 
 .wrapper {
