--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,19 @@
 .titlebox{
   margin:50px;
+  padding:20px;
   background: #E3E6EC;
   box-shadow: 18px 18px 20px #D1D9E6, -18px -18px 20px #FFFFFF;
   border-radius: 30px;
 }
 
+.rc-anchor-light.rc-anchor-normal{
+  border:none;
+  border-radius:20px;
+}
+.rc-anchor-light{
+  border-radius:20px;
+  background-color:white;
+}
 
 .passbox{
   background-color:transparent;
