--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,7 +54,7 @@ body {
   align-items: center;
   width: 100%;
   min-height: 200px;
-  background-color: #fff;
+  background-color: transparent;
   border-radius: 4px;
 }
 
